# MrBoboGraphicsEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  MBGE.cpp  MBGE.h  MBPM_FileInfoIgnore  MBPM_PacketInfo  MrBoboGraphicsEngine.cpp  MrBoboGraphicsEngine.h  TODO.txt  dasd
ProjectDiary/: 2021-11-08.md  2021-11-09.md  2021-11-11.md  2021-11-15.md  2021-11-20.md  2021-11-21.md  2021-11-24.md  2021-11-25.md  2021-11-28.md  2021-12-06.md
Resources/DefaultShaders/: CameraTextureShader.frag  CameraTextureShader.vert  TrivialTextureShader.frag  TrivialTextureShader.vert
Resources/Shaders/: FlatColorVertex  FragmentTextureTest  FragmentTextureTest.frag  LightningFrag.frag  LightningVertex.vert  VertexTextureTest  VertexTextureTest.vert
Resources/Shaders/DebugShaders/: NormalGeometry.geom  NormalVertex.vert
Resources/Shaders/PostProcessing/: PostProcessingDefault.frag  PostProcessingDefault.vert  PostProcessingFrag.frag  PostProcessingVert.vert
